# chess-multiplayer

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml
backend/: pyproject.toml  requirements.txt
backend/src/backend/: main.py  validator.py
backend/tests/: conftest.py  test_smoke.py  test_validator.py
docs/: game-flow.mmd  setup-runbook.md
frontend/: .eslintrc.json  eslint.config.cjs  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: boardState.ts  coordinates.ts  main.ts  renderer.ts  style.css  types.ts
