[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eric Dyke", email = "hello@ericdyke.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "python-socketio>=5.16.2",
    "redis>=8.0.0",
    "uvicorn>=0.48.0",
]

[project.scripts]
backend = "backend.main:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
